<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always" />

    <item android:id="@+id/action_rate"
        android:title="@string/action_rate"
        android:icon="@drawable/ic_action_important"
        app:showAsAction="always" />

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="always" />

    <item android:id="@+id/action_cancel"
        android:title="@string/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always" />

</menu>
