<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/i1"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:textSize="14sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/bPrevious"
                android:text="@string/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:minHeight="48dp"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/bMore"
                android:text="@string/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:minHeight="48dp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/bNext"
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:minHeight="48dp"
                android:textSize="16dp"/>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>



